@@ -1,11 +1,10 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.integrations.destination.redshift;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableMap;
 import io.airbyte.integrations.base.Destination;
 import io.airbyte.integrations.base.IntegrationRunner;
 import io.airbyte.integrations.destination.jdbc.copy.SwitchingDestination;
@@ -19,15 +18,15 @@ import org.slf4j.LoggerFactory;
  * {@link RedshiftInsertDestination} for more detail. The second inserts via streaming the data to
  * an S3 bucket, and Cop-ing the date into Redshift. This is more efficient, and recommended for
  * production workloads, but does require users to set up an S3 bucket and pass in additional
- * credentials. See {@link RedshiftCopyS3Destination} for more detail. This class inspect the given
- * arguments to determine which strategy to use.
+ * credentials. See {@link RedshiftStagingS3Destination} for more detail. This class inspect the
+ * given arguments to determine which strategy to use.
  */
 public class RedshiftDestination extends SwitchingDestination<RedshiftDestination.DestinationType> {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(RedshiftDestination.class);
 
   enum DestinationType {
-    INSERT,
+    STANDARD,
     COPY_S3
   }
 
@@ -36,40 +35,33 @@ public class RedshiftDestination extends SwitchingDestination<RedshiftDestinatio
   }
 
   public static DestinationType getTypeFromConfig(final JsonNode config) {
-    if (isCopy(config)) {
-      return DestinationType.COPY_S3;
-    } else {
-      return DestinationType.INSERT;
-    }
+    return determineUploadMode(config);
   }
 
   public static Map<DestinationType, Destination> getTypeToDestination() {
-    final RedshiftInsertDestination insertDestination = new RedshiftInsertDestination();
-    final RedshiftCopyS3Destination copyS3Destination = new RedshiftCopyS3Destination();
-
-    return ImmutableMap.of(
-        DestinationType.INSERT, insertDestination,
-        DestinationType.COPY_S3, copyS3Destination);
+    return Map.of(
+        DestinationType.STANDARD, new RedshiftInsertDestination(),
+        DestinationType.COPY_S3, new RedshiftStagingS3Destination());
   }
 
-  public static boolean isCopy(final JsonNode config) {
+  public static DestinationType determineUploadMode(final JsonNode config) {
     final var bucketNode = config.get("s3_bucket_name");
     final var regionNode = config.get("s3_bucket_region");
     final var accessKeyIdNode = config.get("access_key_id");
     final var secretAccessKeyNode = config.get("secret_access_key");
 
-    // Since region is a Json schema enum with an empty string default, we consider the empty string an
-    // unset field.
-    final var emptyRegion = regionNode == null || regionNode.asText().equals("");
-
-    if (bucketNode == null && emptyRegion && accessKeyIdNode == null && secretAccessKeyNode == null) {
-      return false;
+    if (isNullOrEmpty(bucketNode) && isNullOrEmpty(regionNode) && isNullOrEmpty(accessKeyIdNode)
+        && isNullOrEmpty(secretAccessKeyNode)) {
+      LOGGER.warn("The \"standard\" upload mode is not performant, and is not recommended for production. " +
+          "Please use the Amazon S3 upload mode if you are syncing a large amount of data.");
+      return DestinationType.STANDARD;
     }
 
-    if (bucketNode == null || regionNode == null || accessKeyIdNode == null || secretAccessKeyNode == null) {
+    if (isNullOrEmpty(bucketNode) && isNullOrEmpty(regionNode) && isNullOrEmpty(accessKeyIdNode)
+        && isNullOrEmpty(secretAccessKeyNode)) {
       throw new RuntimeException("Error: Partially missing S3 Configuration.");
     }
-    return true;
+    return DestinationType.COPY_S3;
   }
 
   public static void main(final String[] args) throws Exception {
@@ -77,6 +69,10 @@ public class RedshiftDestination extends SwitchingDestination<RedshiftDestinatio
     LOGGER.info("starting destination: {}", RedshiftDestination.class);
     new IntegrationRunner(destination).run(args);
     LOGGER.info("completed destination: {}", RedshiftDestination.class);
+  }
+
+  private static boolean isNullOrEmpty(JsonNode jsonNode) {
+    return jsonNode == null || jsonNode.asText().equals("");
   }
 
 }
