@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.workers.helper;
@@ -7,17 +7,19 @@ package io.airbyte.workers.helper;
 import io.airbyte.config.AttemptFailureSummary;
 import io.airbyte.config.FailureReason;
 import io.airbyte.config.FailureReason.FailureOrigin;
+import io.airbyte.config.FailureReason.FailureType;
 import io.airbyte.config.Metadata;
+import io.airbyte.protocol.models.AirbyteTraceMessage;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 
 public class FailureHelper {
 
   private static final String JOB_ID_METADATA_KEY = "jobId";
   private static final String ATTEMPT_NUMBER_METADATA_KEY = "attemptNumber";
+  private static final String TRACE_MESSAGE_METADATA_KEY = "from_trace_message";
 
   private static final String WORKFLOW_TYPE_SYNC = "SyncWorkflow";
   private static final String ACTIVITY_TYPE_REPLICATE = "Replicate";
@@ -30,9 +32,34 @@ public class FailureHelper {
         .withInternalMessage(t.getMessage())
         .withStacktrace(ExceptionUtils.getStackTrace(t))
         .withTimestamp(System.currentTimeMillis())
-        .withMetadata(new Metadata()
-            .withAdditionalProperty(JOB_ID_METADATA_KEY, jobId)
-            .withAdditionalProperty(ATTEMPT_NUMBER_METADATA_KEY, attemptNumber));
+        .withMetadata(jobAndAttemptMetadata(jobId, attemptNumber));
+  }
+
+  // Generate a FailureReason from an AirbyteTraceMessage.
+  // The FailureReason.failureType enum value is taken from the
+  // AirbyteErrorTraceMessage.failureType enum value, so the same enum value
+  // must exist on both Enums in order to be applied correctly to the FailureReason
+  public static FailureReason genericFailure(final AirbyteTraceMessage m, final Long jobId, final Integer attemptNumber) {
+    FailureType failureType;
+    if (m.getError().getFailureType() == null) {
+      // default to system_error when no failure type is set
+      failureType = FailureType.SYSTEM_ERROR;
+    } else {
+      try {
+        final String traceMessageError = m.getError().getFailureType().toString();
+        failureType = FailureReason.FailureType.fromValue(traceMessageError);
+      } catch (final IllegalArgumentException e) {
+        // the trace message error does not exist as a FailureReason failure type,
+        // so set the failure type to null
+        failureType = FailureType.SYSTEM_ERROR;
+      }
+    }
+    return new FailureReason()
+        .withInternalMessage(m.getError().getInternalMessage())
+        .withStacktrace(m.getError().getStackTrace())
+        .withTimestamp(m.getEmittedAt().longValue())
+        .withFailureType(failureType)
+        .withMetadata(traceMessageMetadata(jobId, attemptNumber));
   }
 
   public static FailureReason sourceFailure(final Throwable t, final Long jobId, final Integer attemptNumber) {
@@ -41,15 +68,36 @@ public class FailureHelper {
         .withExternalMessage("Something went wrong within the source connector");
   }
 
+  public static FailureReason sourceFailure(final AirbyteTraceMessage m, final Long jobId, final Integer attemptNumber) {
+    return genericFailure(m, jobId, attemptNumber)
+        .withFailureOrigin(FailureOrigin.SOURCE)
+        .withExternalMessage(m.getError().getMessage());
+  }
+
   public static FailureReason destinationFailure(final Throwable t, final Long jobId, final Integer attemptNumber) {
     return genericFailure(t, jobId, attemptNumber)
         .withFailureOrigin(FailureOrigin.DESTINATION)
         .withExternalMessage("Something went wrong within the destination connector");
   }
 
-  public static FailureReason replicationWorkerFailure(final Throwable t, final Long jobId, final Integer attemptNumber) {
+  public static FailureReason destinationFailure(final AirbyteTraceMessage m, final Long jobId, final Integer attemptNumber) {
+    return genericFailure(m, jobId, attemptNumber)
+        .withFailureOrigin(FailureOrigin.DESTINATION)
+        .withExternalMessage(m.getError().getMessage());
+  }
+
+  public static FailureReason checkFailure(final Throwable t, final Long jobId, final Integer attemptNumber, FailureReason.FailureOrigin origin) {
     return genericFailure(t, jobId, attemptNumber)
-        .withFailureOrigin(FailureOrigin.REPLICATION_WORKER)
+        .withFailureOrigin(origin)
+        .withFailureType(FailureReason.FailureType.CONFIG_ERROR)
+        .withRetryable(false)
+        .withExternalMessage(String
+            .format("Checking %s connection failed - please review this connection's configuration to prevent future syncs from failing", origin));
+  }
+
+  public static FailureReason replicationFailure(final Throwable t, final Long jobId, final Integer attemptNumber) {
+    return genericFailure(t, jobId, attemptNumber)
+        .withFailureOrigin(FailureOrigin.REPLICATION)
         .withExternalMessage("Something went wrong during replication");
   }
 
@@ -73,7 +121,6 @@ public class FailureHelper {
 
   public static FailureReason unknownOriginFailure(final Throwable t, final Long jobId, final Integer attemptNumber) {
     return genericFailure(t, jobId, attemptNumber)
-        .withFailureOrigin(FailureOrigin.UNKNOWN)
         .withExternalMessage("An unknown failure occurred");
   }
 
@@ -83,13 +130,40 @@ public class FailureHelper {
         .withPartialSuccess(partialSuccess);
   }
 
-  public static FailureReason failureReasonFromWorkflowAndActivity(final String workflowType,
+  public static AttemptFailureSummary failureSummaryForCancellation(final Long jobId,
+                                                                    final Integer attemptNumber,
+                                                                    final Set<FailureReason> failures,
+                                                                    final Boolean partialSuccess) {
+    failures.add(new FailureReason()
+        .withFailureType(FailureType.MANUAL_CANCELLATION)
+        .withInternalMessage("Setting attempt to FAILED because the job was cancelled")
+        .withExternalMessage("This attempt was cancelled")
+        .withTimestamp(System.currentTimeMillis())
+        .withMetadata(jobAndAttemptMetadata(jobId, attemptNumber)));
+
+    return failureSummary(failures, partialSuccess);
+  }
+
+  public static AttemptFailureSummary failureSummaryForTemporalCleaningJobState(final Long jobId, final Integer attemptNumber) {
+    final FailureReason failureReason = new FailureReason()
+        .withFailureOrigin(FailureOrigin.AIRBYTE_PLATFORM)
+        .withFailureType(FailureType.SYSTEM_ERROR)
+        .withInternalMessage(
+            "Setting attempt to FAILED because the temporal workflow for this connection was restarted, and existing job state was cleaned.")
+        .withExternalMessage("An internal Airbyte error has occurred. This sync will need to be retried.")
+        .withTimestamp(System.currentTimeMillis())
+        .withMetadata(jobAndAttemptMetadata(jobId, attemptNumber));
+    return new AttemptFailureSummary().withFailures(List.of(failureReason));
+  }
+
+  public static FailureReason failureReasonFromWorkflowAndActivity(
+                                                                   final String workflowType,
                                                                    final String activityType,
                                                                    final Throwable t,
                                                                    final Long jobId,
                                                                    final Integer attemptNumber) {
     if (workflowType.equals(WORKFLOW_TYPE_SYNC) && activityType.equals(ACTIVITY_TYPE_REPLICATE)) {
-      return replicationWorkerFailure(t, jobId, attemptNumber);
+      return replicationFailure(t, jobId, attemptNumber);
     } else if (workflowType.equals(WORKFLOW_TYPE_SYNC) && activityType.equals(ACTIVITY_TYPE_PERSIST)) {
       return persistenceFailure(t, jobId, attemptNumber);
     } else if (workflowType.equals(WORKFLOW_TYPE_SYNC) && activityType.equals(ACTIVITY_TYPE_NORMALIZE)) {
@@ -101,11 +175,35 @@ public class FailureHelper {
     }
   }
 
+  private static Metadata jobAndAttemptMetadata(final Long jobId, final Integer attemptNumber) {
+    return new Metadata()
+        .withAdditionalProperty(JOB_ID_METADATA_KEY, jobId)
+        .withAdditionalProperty(ATTEMPT_NUMBER_METADATA_KEY, attemptNumber);
+  }
+
+  private static Metadata traceMessageMetadata(final Long jobId, final Integer attemptNumber) {
+    return new Metadata()
+        .withAdditionalProperty(JOB_ID_METADATA_KEY, jobId)
+        .withAdditionalProperty(ATTEMPT_NUMBER_METADATA_KEY, attemptNumber)
+        .withAdditionalProperty(TRACE_MESSAGE_METADATA_KEY, true);
+  }
+
   /**
-   * Orders failures by timestamp, so that earlier failures come first in the list.
+   * Orders failures by putting errors from trace messages first, and then orders by timestamp, so
+   * that earlier failures come first.
    */
-  private static List<FailureReason> orderedFailures(final Set<FailureReason> failures) {
-    return failures.stream().sorted(Comparator.comparing(FailureReason::getTimestamp)).collect(Collectors.toList());
+  public static List<FailureReason> orderedFailures(final Set<FailureReason> failures) {
+    final Comparator<FailureReason> compareByIsTrace = Comparator.comparing(failureReason -> {
+      final Object metadata = failureReason.getMetadata();
+      if (metadata != null) {
+        return failureReason.getMetadata().getAdditionalProperties().containsKey(TRACE_MESSAGE_METADATA_KEY) ? 0 : 1;
+      } else {
+        return 1;
+      }
+    });
+    final Comparator<FailureReason> compareByTimestamp = Comparator.comparing(FailureReason::getTimestamp);
+    final Comparator<FailureReason> compareByTraceAndTimestamp = compareByIsTrace.thenComparing(compareByTimestamp);
+    return failures.stream().sorted(compareByTraceAndTimestamp).toList();
   }
 
 }
