@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.workers.process;
@@ -10,23 +10,28 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
+import com.google.common.base.Stopwatch;
 import com.google.common.collect.ImmutableMap;
 import io.airbyte.commons.io.IOs;
 import io.airbyte.commons.io.LineGobbler;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.config.EnvConfigs;
 import io.airbyte.workers.WorkerConfigs;
-import io.airbyte.workers.WorkerException;
 import io.airbyte.workers.WorkerUtils;
+import io.airbyte.workers.exception.WorkerException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.Duration;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.Test;
 
 // todo (cgardens) - these are not truly "unit" tests as they are check resources on the internet.
 // we should move them to "integration" tests, when we have facility to do so.
+@Slf4j
 class DockerProcessFactoryTest {
 
   private static final Path TEST_ROOT = Path.of("/tmp/airbyte_tests");
@@ -78,8 +83,8 @@ class DockerProcessFactoryTest {
 
     final DockerProcessFactory processFactory =
         new DockerProcessFactory(new WorkerConfigs(new EnvConfigs()), workspaceRoot, null, null, null);
-    processFactory.create("job_id", 0, jobRoot, "busybox", false, ImmutableMap.of("config.json", "{\"data\": 2}"), "echo hi",
-        new WorkerConfigs(new EnvConfigs()).getResourceRequirements(), Map.of(), Map.of());
+    processFactory.create("tester", "job_id", 0, jobRoot, "busybox", false, ImmutableMap.of("config.json", "{\"data\": 2}"), "echo hi",
+        new WorkerConfigs(new EnvConfigs()).getResourceRequirements(), Map.of(), Map.of(), Map.of());
 
     assertEquals(
         Jsons.jsonNode(ImmutableMap.of("data", 2)),
@@ -90,7 +95,7 @@ class DockerProcessFactoryTest {
    * Tests that the env var map passed in is accessible within the process.
    */
   @Test
-  public void testEnvMapSet() throws IOException, WorkerException {
+  public void testEnvMapSet() throws IOException, WorkerException, InterruptedException {
     final Path workspaceRoot = Files.createTempDirectory(Files.createDirectories(TEST_ROOT), "process_factory");
     final Path jobRoot = workspaceRoot.resolve("job");
 
@@ -105,7 +110,10 @@ class DockerProcessFactoryTest {
             null,
             "host");
 
+    waitForDockerToInitialize(processFactory, jobRoot, workerConfigs);
+
     final Process process = processFactory.create(
+        "tester",
         "job_id",
         0,
         jobRoot,
@@ -114,6 +122,7 @@ class DockerProcessFactoryTest {
         Map.of(),
         "/bin/sh",
         workerConfigs.getResourceRequirements(),
+        Map.of(),
         Map.of(),
         Map.of(),
         "-c",
@@ -128,6 +137,38 @@ class DockerProcessFactoryTest {
 
     assertEquals(0, process.exitValue(), String.format("Process failed with stdout: %s and stderr: %s", out, err));
     assertEquals("ENV_VAR_1=ENV_VALUE_1", out.toString(), String.format("Output did not contain the expected string. stdout: %s", out));
+  }
+
+  private void waitForDockerToInitialize(final ProcessFactory processFactory, final Path jobRoot, final WorkerConfigs workerConfigs)
+      throws InterruptedException, WorkerException {
+    final var stopwatch = Stopwatch.createStarted();
+
+    while (stopwatch.elapsed().compareTo(Duration.ofSeconds(30)) < 0) {
+      final Process p = processFactory.create(
+          "tester",
+          "job_id_" + RandomStringUtils.randomAlphabetic(4),
+          0,
+          jobRoot,
+          "busybox",
+          false,
+          Map.of(),
+          "/bin/sh",
+          workerConfigs.getResourceRequirements(),
+          Map.of(),
+          Map.of(),
+          Map.of(),
+          "-c",
+          "echo ENV_VAR_1=$ENV_VAR_1");
+      p.waitFor();
+      int exitStatus = p.exitValue();
+
+      if (exitStatus == 0) {
+        log.info("Successfully ran test docker command.");
+        return;
+      }
+    }
+
+    throw new RuntimeException("Failed to run test docker command after timeout.");
   }
 
 }
